vendor/zerocopy/tests/ui-msrv/transmute-ref-dst-not-frombytes.stderr
error[E0277]: the trait bound `Dst: FromBytes` is not satisfied
  --> tests/ui-msrv/transmute-ref-dst-not-frombytes.rs:21:34
   |
21 | const DST_NOT_FROM_BYTES: &Dst = transmute_ref!(&AU16(0));
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `FromBytes` is not implemented for `Dst`
   |
note: required by `AssertDstIsFromBytes`
  --> tests/ui-msrv/transmute-ref-dst-not-frombytes.rs:21:34
   |
21 | const DST_NOT_FROM_BYTES: &Dst = transmute_ref!(&AU16(0));
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)
